--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,6 +17,7 @@ JWT_REFRESH_EXPIRES_IN=7d
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
+REDIS_USER=
 
 # Client URL (for CORS)
 CLIENT_URL=http://localhost:5173
