fix: fix redis client can connect both cloud + local url

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,7 +17,7 @@ JWT_REFRESH_EXPIRES_IN=7d
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
-REDIS_USER=
+REDIS_USERNAME=
 
 # Client URL (for CORS)
 CLIENT_URL=http://localhost:5173
