fix: fix FE show error when BE response

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,7 @@
 ﻿# API Configuration
 # Backend API URL - API server address
 # Format: http://localhost:PORT or https://your-domain.com
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://vtai2834-be-assignment-devsammurai.onrender.com/api
 
 # Example for production:
 # VITE_API_URL=https://api.yourdomain.com/api
